Started adding CPU logic
* Writed 1/3 opcodes

TODO: rewrite arithm opcodes with #define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("DXEmu")
 
 # Добавьте источник в исполняемый файл этого проекта.
-add_executable (DXEmu "DXEmu.cpp" "DXEmu.h")
+add_executable (DXEmu "src/main.cpp" "src/main.h" "src/CPU.cpp" "src/Memory.cpp" "src/Memory.h")
 
 # TODO: Добавьте тесты и целевые объекты, если это необходимо.
